tests/ui/attributes/rustc_confusables_assoc_fn.stderr
error[E0599]: no function or associated item named `bar` found for struct `S` in the current scope
  --> $DIR/rustc_confusables_assoc_fn.rs:14:8
   |
LL | struct S;
   | -------- function or associated item `bar` not found for this struct
...
LL |     S::bar();
   |        ^^^ function or associated item not found in `S`
   |
help: you might have meant to use `foo`
   |
LL -     S::bar();
LL +     S::foo();
   |

error[E0599]: no method named `baz` found for struct `S` in the current scope
  --> $DIR/rustc_confusables_assoc_fn.rs:19:7
   |
LL | struct S;
   | -------- method `baz` not found for this struct
...
LL |     s.baz(10);
   |       ^^^ method not found in `S`
   |
help: you might have meant to use `qux`
   |
LL -     s.baz(10);
LL +     s.qux(10);
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0599`.
